Moving on to v2 branch

--- a/ZTEHostlessDashboard/App.config
+++ b/ZTEHostlessDashboard/App.config
@@ -4,6 +4,9 @@
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
       <section name="ZTEHostlessDashboard.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ZTEHostlessDashboard.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <system.net>
     <settings>
@@ -16,8 +19,24 @@
         <value>192.168.0.1</value>
       </setting>
       <setting name="pooling_interval" serializeAs="String">
-        <value>500</value>
+        <value>1000</value>
+      </setting>
+      <setting name="always_on_top" serializeAs="String">
+        <value>False</value>
       </setting>
     </ZTEHostlessDashboard.Properties.Settings>
   </userSettings>
+  <applicationSettings>
+    <ZTEHostlessDashboard.Properties.Settings>
+      <setting name="cooldown_interval" serializeAs="String">
+        <value>500</value>
+      </setting>
+      <setting name="operation_timeout" serializeAs="String">
+        <value>5000</value>
+      </setting>
+      <setting name="long_operation_timeout" serializeAs="String">
+        <value>30000</value>
+      </setting>
+    </ZTEHostlessDashboard.Properties.Settings>
+  </applicationSettings>
 </configuration>
